# swc-plugin-react-source

./: CHANGELOG.md  Cargo.toml  README.md  package.json  release-please-config.json  rust-toolchain.toml  swc_plugin_react_source_string.wasm
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: lib.rs
