[package]
name = "swc-plugin-react-source-string"
version = "0.2.0"
edition = "2021"
description = "SWC plugin that adds data-source attributes to JSX elements (React/UI components and HTML elements) for debugging"

[lib]
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(swc_ast_unknown)"] }

[dependencies]
serde = { version = "=1.0.209", features = ["derive"] }
serde_json = "=1.0.127"
swc_core = { version = "=36.0.0", features = ["common", "ecma_utils", "ecma_plugin_transform"] }
